test/visibility/import/relative/import-relative-error5.good
import-relative-error5.chpl:5: error: 'this.' can only be used as prefix of import
