test/visibility/import/relative/import-relative-error5.chpl
module M {

  var x:int;

  import this;
}
